@@ -4,7 +4,8 @@ Changelog
 2.0a3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix tiles zcml conditional check.
+- Use a template for the tile rendering
 
 
 2.0a2 (2013-01-31)
